azurecb-ingress-cb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cbwebsocket-mani-oct
  namespace : ingress-basic-oct
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cbazuredemo-cbserver-lb
              servicePort: 80
            path: /
