azurecb-ingress-socket.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cbwebsocket-mani-oct
  namespace : ingress-basic-oct
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: azure-cloudbroker-oct.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: cbazuredemo-socketserver-lb
              servicePort: 80
