azurecb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cbwebsocket-mani
  namespace : ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo-akscb-ingress.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: cbprojectnode-app-lb
              servicePort: 80
